--- a/frontend/src/pages/HomePage.scss
+++ b/frontend/src/pages/HomePage.scss
@@ -13,6 +13,8 @@ $text: #2c3e50;
   justify-content: flex-start;
   padding: 0.5rem 0.5rem 1rem 0.5rem;
   gap: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: hidden;
 
   h1 {
     color: $primary;
@@ -39,6 +41,8 @@ $text: #2c3e50;
   .home-container {
     padding: 0.5rem 0.2rem 1rem 0.2rem;
     gap: 0.3rem;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
   .home-container p {
     padding: 0.7rem 0.5rem;
