--- a/frontend/src/pages/SpendChartsPage.scss
+++ b/frontend/src/pages/SpendChartsPage.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   .charts-content {
     width: 100vw;
     max-width: 100vw;
@@ -12,6 +12,7 @@
     padding: 2vw 3vw; // Add horizontal padding for space on left and right
     box-sizing: border-box;
     overflow-x: hidden;
+    overflow-y: hidden;
     .charts-header {
       display: flex;
       flex-wrap: wrap;
@@ -27,6 +28,7 @@
       width: 100%;
       display: block;
       overflow-x: hidden;
+      overflow-y: hidden;
       .chart-1, .expense-sum-line-chart, .expense-sum-bar-chart {
         width: 100%;
         min-width: 0;
